[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/components/SkyrimSlider.gd" id="1_0"]

[node name="root" type="HBoxContainer"]
script = ExtResource("1_0")

[node name="SliderLabel" type="Label" parent="."]
layout_mode = 2
text = "Placeholder"

[node name="ValueSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="ValueLabel" type="Label" parent="."]
layout_mode = 2
text = "1.00"
horizontal_alignment = 2
